# timecard-calculator-dx

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  justfile  package.json  pnpm-lock.yaml  timecard-lookup.json
.cargo/: config.toml
.github/: copilot-instructions.md
docs/: 2026-05-21-timecard-calc-backend.md  2026-05-21-timecard-calc-design.md  2026-05-21-timecard-calc-frontend.md
docs/superpowers/plans/: 2026-05-23-timecard-backend.md  2026-05-23-timecard-frontend.md  2026-05-23-ui-rework.md
docs/superpowers/specs/: 2026-05-23-ui-rework-design.md
