[workspace]
resolver = "2"
members = [
    "packages/ui",
    "packages/desktop",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
rfd = "0.17"

ui = { path = "packages/ui" }
api = { path = "packages/api" }
