[workspace]
resolver = "2"
members = ["packages/ui", "packages/desktop", "packages/api"]

[workspace.dependencies]
dioxus = { version = "0.7.9" }
sqlx = { version = "0.9.0", features = [
  "runtime-tokio",
  "sqlite",
  "chrono",
  "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
dirs = "6"
tokio = { version = "1", features = ["full"] }
rfd = "0.17"
rand = "^0.8.6" # pin this to 0.8.6 or higher to avoid a security vulnerability in rand 0.8.5 and below

ui = { path = "packages/ui" }
api = { path = "packages/api" }
